<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">first_assignment</string>
    <string name="id_hint">아이디를 입력하세요</string>
    <string name="pw_hint">패스워드를 입력하세요</string>
    <string name="log_button">로그인</string>
    
    !--Text 말머리 만든 곳 --!
    <string name="text_session">세션키: </string>
    <string name="text_user_id">사용자 아이디: </string>
    <string name="text_user_type">사용자 타입: </string>
    <string name="text_start_mode">시작 모드: </string>
    <string name="text_devices">페어링한 디바이스 목록: </string>
    <string name="progress_loding">api와 통신중...</string>
    
    !-- 에러 문구 만든 곳 --!
    <string name="hardware_error">하드웨어적 결함 발생:네트워크 연결 필요</string>
    <string name="login_warning">존재하지 않는 계정입니다.</string>
    <string name="parameter_warning">필수 인자가 다 채워지지 않았습니다.</string>
    <string name="response_warning">불완전한 response가 왔습니다. 재시도 해주세요.</string>
</resources>

