<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/first_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="20dp">
    <TextView
        android:id="@+id/tv_session_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_session" />

    <TextView
        android:id="@+id/tv_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_user_id" />

    <TextView
        android:id="@+id/tv_user_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_user_type" />

    <TextView
        android:id="@+id/tv_start_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_start_mode" />

    <TextView
        android:id="@+id/tv_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_devices" />

        </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/second_layout"
        android:gravity="center"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/failure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</LinearLayout>